--- a/chi2012.tex
+++ b/chi2012.tex
@@ -99,7 +99,9 @@ breaklinks=true,
 \maketitle
 
 \begin{abstract}
-Although people naturally rely upon multiple, diverse information sources in the course of routine problem-solving and decision-making tasks, support for data integration in Personal Information Management (PIM) tools remains poor, if largely nonexistent. This paper presents an exploratory, sequential, mixed-method study of ways to extend PIM tools to support user-driven data integration while performing their primary tasks. We present results of two pre-study in which requirements, we designed and evaluated DataPalette.  
+While people naturally draw from diverse information sources in the course of routine decision-making, complementary support for managing diverse, heterogeneous data in digital Personal Information Management (PIM) tools remains poor.  In this paper, we present an exploratory initial investigation of ways to support user-driven, ad-hoc data integration in PIM tools, towards opening up for use the emerging ecosystem of structured data now available via APIs and structured data feeds on the Web.  We conducted an exploratory, sequential, mixed-method study, starting with two pre-studies focusing on blah and blah, finding that blah ad blah.  These 
+
+designed and evaluated DataPalette.  
 % We find that the ``light-touch'' data integration mechanisms introduced allow people to effectively work with and combine information from multiple sources, and more thoroughly justify their choices 
 %% exploratory, sequential mixed-method study of 
 \end{abstract}
