Split and minor changes

--- a/chi2012.tex
+++ b/chi2012.tex
@@ -99,7 +99,11 @@ breaklinks=true,
 \maketitle
 
 \begin{abstract}
-While people naturally draw from diverse information sources in the course of routine decision-making, complementary support for managing diverse, heterogeneous data in digital Personal Information Management (PIM) tools remains poor.  In this paper, we present an exploratory initial investigation of user-driven, ad-hoc data integration approaches for PIM, towards enabling greater use of emerging ecosystem of structured data available on the Web.  We conducted an exploratory, sequential, mixed-method study, starting with two pre-studies focusing on the data integration needs and challenges, respectively, of effectively combining data from diverse Web-based structured data sources.  These observations led to the design of DataPalette, an interface for ``light-touch'' data integration that introduced drag-and-drop and path-selection mechanisms for managing collections of terminologically and structurally- heterogeneous data items.  Our lab study of DataPalette with actual data obtained from a selection of Web sites  showed that users understood the interaction mechanisms introduced and the problems they were designed to address, and that DesignPalette allowed them to make more carefully informed decisions and draw from more data sources while performing multidimensional subjective choice-based tasks.
+While people naturally draw from diverse information sources in the course of routine decision-making, complementary support for managing diverse, heterogeneous data in digital Personal Information Management (PIM) tools remains poor.
+In this paper, we present an exploratory initial investigation of user-driven, ad-hoc data integration approaches for PIM, towards enabling greater use of emerging ecosystem of structured data available on the Web.
+We conducted an exploratory, sequential, mixed-method study, starting with two pre-studies focusing on the data integration needs and challenges, respectively, of effectively combining data from diverse Web-based structured data sources.
+These observations led to the design of DataPalette, an interface for ``light-touch'' data integration that introduced drag-and-drop and path-selection mechanisms for managing collections of terminologically and structurally-heterogeneous data.
+Our lab study of DataPalette with actual data obtained from a selection of Web sites  showed that users understood the interaction mechanisms introduced and the problems they were designed to address, and that DesignPalette allowed them to make more carefully informed decisions and draw from more data sources while performing multidimensional subjective choice-based tasks.
 
 % We find that the ``light-touch'' data integration mechanisms introduced allow people to effectively work with and combine information from multiple sources, and more thoroughly justify their choices 
 %% exploratory, sequential mixed-method study of 
