--- a/chi2012.tex
+++ b/chi2012.tex
@@ -103,7 +103,7 @@ While people naturally draw from diverse information sources in the course of ro
 In this paper, we present an exploratory initial investigation of user-driven, ad-hoc data integration approaches for PIM, towards enabling greater use of emerging ecosystems of structured data available on the Web.
 We conducted an exploratory, sequential, mixed-method study, starting with two pre-studies focusing on the data integration needs and challenges, respectively, of effectively combining data from diverse Web-based structured data sources.
 These observations led to the design of DataPalette, an interface for ``light-touch'' data integration that introduced drag-and-drop and path-selection mechanisms for managing collections of terminologically and structurally-heterogeneous data.
-Our lab study of DataPalette with actual data obtained from a selection of Web sites  showed that users understood the interaction mechanisms introduced and the problems they were designed to address, and that DesignPalette allowed them to make more carefully informed decisions and draw from more data sources while performing multidimensional subjective choice-based tasks.
+Our DataPalette lab study showed that users understood the interaction mechanisms and the problems they were designed to address, and that it allowed them to make more carefully informed decisions and draw from more data sources while making multidimensional subjective decisions.
 
 % We find that the ``light-touch'' data integration mechanisms introduced allow people to effectively work with and combine information from multiple sources, and more thoroughly justify their choices 
 %% exploratory, sequential mixed-method study of 
