--- a/chi2012.tex
+++ b/chi2012.tex
@@ -102,8 +102,8 @@ breaklinks=true,
 While people naturally draw from diverse information sources in the course of routine decision-making, complementary support for managing diverse, heterogeneous data in digital Personal Information Management (PIM) tools remains poor.
 In this paper, we present an exploratory initial investigation of user-driven, ad-hoc data integration approaches for PIM, towards enabling greater use of emerging ecosystems of structured data available on the Web.
 We conducted an exploratory, sequential, mixed-method study, starting with two pre-studies focusing on the data integration needs and challenges, respectively, of effectively combining data from diverse Web-based structured data sources.
-These observations led to DataPalette, an interface that introduced drag-and-drop and path-selection mechanisms for working with terminologically and structurally heterogeneous data.
-Our DataPalette lab study showed that users understood the interaction mechanisms and the problems they were designed to address, and that it allowed them to make more carefully informed decisions and draw from more data sources while making multidimensional subjective decisions.
+These observations led to our design of DataPalette, an interface that introduced drag-and-drop and path-selection mechanisms for working with terminologically and structurally heterogeneous data.  
+A lab study showed that users understood the interaction mechanisms and the problems they were designed to address, and that it allowed them to make more carefully informed decisions and draw from more data sources while making multidimensional subjective decisions.
 
 % We find that the ``light-touch'' data integration mechanisms introduced allow people to effectively work with and combine information from multiple sources, and more thoroughly justify their choices 
 %% exploratory, sequential mixed-method study of 
