--- a/chi2012.tex
+++ b/chi2012.tex
@@ -101,7 +101,7 @@ breaklinks=true,
 \begin{abstract}
 
 While people naturally draw from diverse information sources in the course of routine decision-making, complementary support for managing diverse, heterogeneous data in digital Personal Information Management (PIM) tools remains poor.
-In this paper, we present an exploratory initial investigation of user-driven, ad-hoc data integration approaches for PIM, towards enabling greater use of emerging ecosystems of structured data available on the Web.
+In this paper, we present an exploratory initial investigation of user-driven, ad-hoc data integration approaches for PIM, towards enabling greater use of the emerging ecosystems of structured data available on the Web.
 We conducted an exploratory, sequential, mixed-method study, starting with two pre-studies focusing on the data integration needs and challenges, respectively, of effectively combining data from diverse Web-based structured data sources.
 These observations led to our design of DataPalette, an interface that introduced drag-and-drop and path-selection mechanisms for working with terminologically and structurally heterogeneous data.  
 Our lab study showed that participants understood the interaction mechanisms introduced, and made more carefully-justified decisions, drawing upon more data sources with DataPalette than a control condition, during multidimensional subjective choice decisions.
