--- a/chi2012.tex
+++ b/chi2012.tex
@@ -101,10 +101,10 @@ breaklinks=true,
 \begin{abstract}
 
 While people naturally draw from diverse information sources in the course of routine decision-making, complementary support for managing diverse, heterogeneous data in digital Personal Information Management (PIM) tools remains poor.
-In this paper, we present an exploratory initial investigation of user-driven, ad-hoc data integration approaches for PIM, towards enabling greater use of the emerging ecosystems of structured data available on the Web.
-We conducted an exploratory, sequential, mixed-method study, starting with two pre-studies focusing on the data integration needs and challenges, respectively, of effectively combining data from diverse Web-based structured data sources.
-These observations led to our design of DataPalette, an interface that introduced drag-and-drop and path-selection mechanisms for working with terminologically and structurally heterogeneous data.  
-Our lab study showed that participants understood the interaction mechanisms introduced, and made more carefully-justified decisions, drawing upon more data sources with DataPalette than a control condition, during multidimensional subjective choice decisions.
+In this paper, we present an exploratory initial investigation of user-driven, ad-hoc data integration approaches for PIM, towards enabling greater use of the emerging ecosystems of structured data on the Web.
+We conducted an exploratory, sequential, mixed-method study, starting with two pre-studies examining the data integration needs and challenges, respectively, of effectively combining data from diverse Web-based structured data sources.
+These observations led to our design of DataPalette, an interface that introduced simple drag-and-drop and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  
+Our lab study showed that participants understood the interaction mechanisms introduced, and made more carefully-justified decisions, drawing upon more data sources with DataPalette than a control condition during multidimensional, subjective-choice decisions.
 
 %% While people naturally draw from diverse information sources in the course of routine decision-making, complementary support for managing diverse, heterogeneous data in digital Personal Information Management (PIM) tools remains poor.
 %% In this paper, we present an exploratory initial investigation of user-driven, ad-hoc data integration approaches for PIM, towards enabling greater use of emerging ecosystems of structured data available on the Web.
@@ -116,7 +116,7 @@ Our lab study showed that participants understood the interaction mechanisms int
 %% exploratory, sequential mixed-method study of 
 \end{abstract}
 
-\keywords{}
+\keywords{Personal Information Management, Personal Data Management, User-driven data integration}
 
 \category{H.5.m.}{Information Interfaces and Presentation (e.g. HCI)}{Miscellaneous}
 
