--- a/carpedata.bib
+++ b/carpedata.bib
@@ -134,7 +134,7 @@ time,...}},
 }
 
 @article{euzenat2004api,
- title={An API for ontology alignment},
+ title={{An API for ontology alignment}},
  author={Euzenat, J.},
  journal={The Semantic Web--ISWC 2004},
  pages={698--712},
@@ -143,7 +143,7 @@ time,...}},
 }
 
 @article{doan2003learning,
- title={Learning to match ontologies on the Semantic Web},
+ title={{Learning to match ontologies on the Semantic Web}},
  author={Doan, A.H. and Madhavan, J. and Dhamankar, R. and Domingos, P. and Halevy, A.},
  journal={The VLDB Journal},
  volume={12},
