Added intel mashmaker reference.

--- a/carpedata.bib
+++ b/carpedata.bib
@@ -294,3 +294,16 @@ time,...}},
   year={2008},
   publisher={acm}
 }
+
+@article{intel_mashmaker,
+  author = {Ennals, Rob and Brewer, Eric and Garofalakis, Minos and Shadle, Michael and Gandhi, Prashant},
+  title = {Intel Mash Maker: join the web},
+  journal = {SIGMOD Rec.},
+  volume = {36},
+  number = {4},
+  month = dec,
+  year = {2007},
+  pages = {27--33},
+  numpages = {7},
+  publisher = {ACM},
+} 
