Removed weird character at top of file

--- a/carpedata.bib
+++ b/carpedata.bib
@@ -1,4 +1,4 @@
-﻿@ARTICLE{user-subjective,
+@ARTICLE{user-subjective,
     author = {Ofer Bergman and Ruth Beyth-marom and Rafi Nachmias},
     title = {The user-subjective approach to personal information management systems},
     journal = {Journal of the American Society for Information Science and Technology},
@@ -243,6 +243,7 @@ time,...}},
  address = {New York, NY, USA},
  keywords = {personalized web search, template-based representation, view and layout editing, web content extraction},
 } 
+
 @article{Shadbolt:2006:SWR:1155313.1155373,
  author = {Shadbolt, Nigel and Berners-Lee, Tim and Hall, Wendy},
  title = {The Semantic Web Revisited},
