--- a/chi2012.tex
+++ b/chi2012.tex
@@ -587,9 +587,7 @@ Assessing whether DP improved task performance (h3) was difficult given the smal
 
 In addition to the aforementioned feature requests, we observed a number of ``pain points'' in the design of the DP interface.  One such pain point was window layout and screen real estate management; participants were prone to opening up a large number of windows, including maps and charts.  When their screen started to fill up, we found that participants spent a lot of time arranging windows, and second, that people tended to forget what each window represented -- ``what was this again?''.  We plan to address these issue in the next version of DataPalette.
 
-\subsection{Integration Support}
-
-A key design decision we made at the outset was to target the most common, simpler forms of heterogeneity we observed in PS.2.  Given the use of the interface mechanisms we observed, we wish to next broaden the scope of capabilities of DP so that it can become more useful in real settings.  Among the integration capabilities we are considering are, first, field combination and splitting (by delimiters), in order to address the kinds of structural heterogeneity observed in several cases of PS.2, along with a framework for converting and reconciling units of measure, which would address several of the modelling issues.  Extending the Do What I Mean capabilities of the histogram and bar-charting tools to be unit-aware would be a tremendous asset, we believe, for users who want to quickly compare things without paying close attention to the units used.  A core problem to realising this, however, is that few data sources (besides the Weather category) explicitly annotated values with units used.
+A key design decision we made at the outset was to target only the most common forms of heterogeneity observed in PS.2.  To expand DP's integration capabilities, we are considering a number of new interaction affordances for facilitating field combination and splitting, and unit of measure reconciliation.  This would cover a majority of the structural and modeling-oriented heterogeneity cases observed in DP.2.  Extending the Do What I Mean capabilities of the visualisation tools to be unit-aware would be a tremendous asset; a core problem, however, stems from the fact that few sources explicitly annotated values with units.
 
 \subsection{Study Limitations}
 
