Table caption slightly improved

--- a/chi2012.tex
+++ b/chi2012.tex
@@ -479,7 +479,7 @@ chosen restaurant/uni &4.1&2.4&3.5&4.3&3.3&&2.4&1.4&4.2&1.6, \newline 1.3, \newl
  \hline
 \end{tabular}
 \end{center}
-\caption{Participants data.} \label{tbl:data}
+\caption{Data collected from each of our trials, for each participant.} \label{tbl:data}
 \normalsize
 \end{table*}
 
