Tightening results, fixed broken cites

--- a/carpedata.bib
+++ b/carpedata.bib
@@ -1,3 +1,13 @@
+@article{tlx,
+  title={Development of NASA-TLX (Task Load Index): Results of empirical and theoretical research},
+  author={Hart, S.G. and Staveland, L.E.},
+  journal={Human mental workload},
+  volume={1},
+  pages={139--183},
+  year={1988},
+  publisher={Amsterdam, Holland}
+}
+
 @ARTICLE{user-subjective,
     author = {Ofer Bergman and Ruth Beyth-marom and Rafi Nachmias},
     title = {The user-subjective approach to personal information management systems},
